# signature-recognition

./: README.md  pyproject.toml
app/: main.py
app/aruco/: mark_pdf.py
app/file/: errors.py  read_image.py  read_pdf.py
app/handlers/: aruco_signature.py  validate_file.py  validate_image.py
tests/: conftest.py
tests/aruco/: test_mark_pdf.py
tests/file/: test_read_pdf.py
tests/handlers/: test_aruco_signature.py
