[project]
name = "signature-recognition"
version = "0.1.0"
description = "A program to recognise signatures from photos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "opencv-python>=4.13.0.92",
    "pymupdf>=1.28.0",
    "requests>=2.34.2",
]
